--- a/Voucher Magic/Site.Master
+++ b/Voucher Magic/Site.Master
@@ -43,7 +43,7 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - Mi aplicación ASP.NET</p>
+                <p>&copy; <%: DateTime.Now.Year %> - Mi aplicación Voucher Magic</p>
             </footer>
         </div>
 
